public/styles/output.css
/* ... */
/*
Make sure disabled buttons don't get the pointer cursor.
*/

:disabled {
  cursor: default;
}

/*
1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
   This can trigger a poorly considered lint error in some tools but is included by design.
*/

img,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
  display: block;
  /* 1 */
  vertical-align: middle;
  /* 2 */
}

/*
Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
*/

img,
video {
  max-width: 100%;
  height: auto;
}

/* Make elements with the HTML hidden attribute stay hidden by default */

[hidden]:where(:not([hidden="until-found"])) {
  display: none;
}

.static {
  position: static;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.-bottom-32 {
  bottom: -8rem;
}

.-bottom-\[450px\] {
  bottom: -450px;
}

.-bottom-\[464px\] {
  bottom: -464px;
}

.-left-1 {
  left: -0.25rem;
}

.-left-8 {
  left: -2rem;
}

.-right-1 {
  right: -0.25rem;
}

.-right-8 {
  right: -2rem;
}

.bottom-\[146px\] {
  bottom: 146px;
}

.left-0 {
  left: 0px;
}

.right-0 {
  right: 0px;
}

.top-0 {
  top: 0px;
}

.top-\[50px\] {
  top: 50px;
}

.z-20 {
  z-index: 20;
}

.z-50 {
  z-index: 50;
}

.mx-\[15px\] {
  margin-left: 15px;
  margin-right: 15px;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.my-5 {
  margin-top: 1.25rem;
  margin-bottom: 1.25rem;
}

.mt-2 {
  margin-top: 0.5rem;
}

.mt-5 {
  margin-top: 1.25rem;
}

.mt-8 {
  margin-top: 2rem;
}

.flex {
  display: flex;
}

.table {
  display: table;
}

.hidden {
  display: none;
}

.size-3 {
  width: 0.75rem;
  height: 0.75rem;
}

.h-\[101px\] {
  height: 101px;
}

.h-\[236px\] {
  height: 236px;
}

.h-\[23px\] {
  height: 23px;
}

.h-\[24px\] {
  height: 24px;
}

.h-\[25px\] {
  height: 25px;
}

.h-\[29px\] {
  height: 29px;
}

.h-\[37px\] {
  height: 37px;
}

.h-\[40\.34\] {
  height: 40.34;
}

.h-\[60px\] {
  height: 60px;
}

.h-\[61\.2px\] {
  height: 61.2px;
}

.w-\[102px\] {
  width: 102px;
}

.w-\[146px\] {
  width: 146px;
}

.w-\[340px\] {
  width: 340px;
}

.w-\[38\.3px\] {
  width: 38.3px;
}

.w-\[380px\] {
  width: 380px;
}

.w-\[46px\] {
  width: 46px;
}

.w-\[612px\] {
  width: 612px;
}

.w-\[70px\] {
  width: 70px;
}

.w-\[80\.32px\] {
  width: 80.32px;
}

.w-fit {
  width: -moz-fit-content;
  width: fit-content;
}

.w-full {
  width: 100%;
}

.w-max {
  width: -moz-max-content;
  width: max-content;
}

.max-w-\[360px\] {
  max-width: 360px;
}

.flex-shrink {
  flex-shrink: 1;
}

.rotate-180 {
  --tw-rotate: 180deg;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.list-disc {
  list-style-type: disc;
}

.flex-col {
  flex-direction: column;
}

.flex-wrap {
  flex-wrap: wrap;
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.gap-1 {
  gap: 0.25rem;
}

.gap-10 {
  gap: 2.5rem;
}

.gap-2 {
  gap: 0.5rem;
}

.gap-5 {
  gap: 1.25rem;
}

.gap-\[10px\] {
  gap: 10px;
}

.gap-\[14px\] {
  gap: 14px;
}

.gap-\[16px\] {
  gap: 16px;
}

.gap-\[30px\] {
  gap: 30px;
}

.gap-\[32px\] {
  gap: 32px;
}

.gap-\[4px\] {
  gap: 4px;
}

.gap-\[8px\] {
  gap: 8px;
}

.gap-y-\[30px\] {
  row-gap: 30px;
}

.justify-self-center {
  justify-self: center;
}

.overflow-hidden {
  overflow: hidden;
}

.rounded-2xl {
  border-radius: 1rem;
}

.rounded-\[15px\] {
  border-radius: 15px;
}

.rounded-\[30px\] {
  border-radius: 30px;
}

.rounded-\[8px\] {
  border-radius: 8px;
}

.rounded-br-\[30px\] {
  border-bottom-right-radius: 30px;
}

.rounded-tl-\[30px\] {
  border-top-left-radius: 30px;
}

.border {
  border-width: 1px;
}

.border-2 {
  border-width: 2px;
}

.border-green {
  --tw-border-opacity: 1;
  border-color: rgb(58 255 173 / var(--tw-border-opacity, 1));
}

.border-white {
  --tw-border-opacity: 1;
  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
}

.bg-blue {
  --tw-bg-opacity: 1;
  background-color: rgb(13 15 41 / var(--tw-bg-opacity, 1));
}

.bg-gradient-to-r {
  background-image: linear-gradient(to right, var(--tw-gradient-stops));
}

.from-orangy {
  --tw-gradient-from: #FF3A5A var(--tw-gradient-from-position);
  --tw-gradient-to: rgb(255 58 90 / 0) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
}

.to-pinky {
  --tw-gradient-to: #7733FF var(--tw-gradient-to-position);
}

.bg-clip-text {
  -webkit-background-clip: text;
          background-clip: text;
}

.object-contain {
  -o-object-fit: contain;
     object-fit: contain;
}

.p-2 {
  padding: 0.5rem;
}

.px-10 {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}

.px-3 {
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.px-5 {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.px-\[16px\] {
  padding-left: 16px;
  padding-right: 16px;
}

.px-\[20px\] {
  padding-left: 20px;
  padding-right: 20px;
}

.px-\[32px\] {
  padding-left: 32px;
  padding-right: 32px;
}

.px-\[40px\] {
  padding-left: 40px;
  padding-right: 40px;
}

.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.py-\[13px\] {
  padding-top: 13px;
  padding-bottom: 13px;
}

.py-\[6px\] {
  padding-top: 6px;
  padding-bottom: 6px;
}

.py-\[8px\] {
  padding-top: 8px;
  padding-bottom: 8px;
}

.pb-10 {
  padding-bottom: 2.5rem;
}
/* ... */

